# blueprint-ANDIO

./: .gitignore  NOTICE  README.md  action.yml  pyproject.toml
andio/: __init__.py  cli.py  css_parser.py  html_parser.py  models.py  not_checked.py  report.py  scanner.py  wcag.py
andio/checks/: __init__.py  base.py  focusable.py  global_checks.py  graphics.py  hidden.py  links.py  structures.py
docs/: andio-gap-analysis.md
tests/: test_css_parser.py  test_focusable_checks.py  test_global_checks.py  test_graphics_checks.py  test_hidden_checks.py  test_html_parser.py  test_integration.py  test_link_checks.py  test_smoke.py  test_structure_checks.py
tests/fixtures/: clean.html  focusable_violations.html  global_violations.html  graphics_violations.html  link_violations.html  pseudo_content.css  structure_violations.html  template_erb.html  template_jinja.html
